--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -7,6 +7,7 @@
 	"name": "n8n-workflow-proxy",
 	"main": "src/index.js",
 	"compatibility_date": "2025-06-28",
+	"compatibility_flags": ["nodejs_compat"],
 	"observability": {
 		"enabled": true
 	}
