--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
 		"deploy": "wrangler deploy",
 		"dev": "wrangler dev",
 		"start": "wrangler dev",
-		"test": "vitest run"
+		"test": "vitest run",
+		"types": "wrangler types"
 	},
 	"devDependencies": {
-		"@cloudflare/vitest-pool-workers": "^0.8.47",
-		"vitest": "~3.2.4",
-		"wrangler": "^4.22.0"
+		"@cloudflare/vitest-pool-workers": "^0.8.49",
+		"typescript": "^5.8.3",
+		"wrangler": "^4.23.0"
 	}
 }
