--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -5,7 +5,7 @@
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
 	"name": "n8n-workflow-proxy",
-	"main": "src/index.js",
+	"main": "src/index.ts",
 	"compatibility_date": "2025-06-17",
 	"compatibility_flags": ["nodejs_compat"],
 	"observability": {
